<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">CookingShow</string>
    <string name="network_notice_detail">Unable to connect to the network, please check it!</string>
    <string name="tv_dialog_network_continue">retry</string>
    <string name="tv_dialog_network_setting">exit&amp;set network</string>
    <string name="tv_nodata">sorry, no data!</string>
    <string name="loading_text">wait loading...&#8230;</string>
    <string name="list_app_loading_text">loading...</string>
    <string name="page_separator">/</string>
    <string name="main_exit_config_notice">Press back key again to exit.</string>
    <string name="mine_service_center">service center</string>
    <string name="mine_upload_video">upload video</string>
    <string name="history_menu_user">history</string>
    <string name="video_menu_user">cookbook</string>
    <string name="pic_menu_user">share</string>
    <string name="dining_menu_user">hotel</string>
    <string name="user_name">userName</string>
    <string name="index_search_btn">search</string>
    <string name="btn_weixin">assistant</string>
    <string name="page_help_weixin">一台电视最多可绑定3个微信帐号，请点击“使用其他微信帐号”按照提示操作</string>
    <string name="push_title">微信扫描二维码下载到手机</string>
    <string name="weixin_service">7×24小时在线服务，体验微信电视的乐趣！</string>
    <string name="weixin_num_lable_1">1</string>
    <string name="weixin_num_lable_2">2</string>
    <string name="weixin_num_lable_3">3</string>
    <string name="weixin_phone_client">打开微信手机客户端；</string>
    <string name="weixin_find_scan">点击 “发现” - “扫一扫”，对准右侧二维码扫描；</string>
    <string name="weixin_scan_qr">  扫描右侧二维码；</string>
    <string name="weixin_scan_finish">待下载成功后安装，即可手机使用！</string>
    <string name="weixin_create_qr">正在努力生成二维码&#8230;</string>
    <string name="weixin_error_text">加載失敗</string>
    <string name="weixin_reply">手机扫描二维码回复</string>
    <string name="weixin_review">手机扫描二维码发表你想说的！</string>
    <string name="btn_make">method</string>
    <string name="btn_comment">comment</string>
    <string name="btn_segment">segment</string>
    <string name="btn_share">works from others</string>
    <string name="btn_my_share">upload my share</string>
    <string name="btn_dining_order">order</string>
    <string name="video_tips">tips</string>
    <string name="uploader">uploader：</string>
    <string name="upload_time">upload time：</string>
    <string name="thumber_up">like</string>
    <string name="follow_ta">follow</string>
    <string name="user_follow">follow：</string>
    <string name="user_fans">fans：</string>
    <string name="user_bean">bean：</string>    
    <string name="thumber">like：</string>
    <string name="pic_num">works：</string>
    <string name="dish_material">ingredients</string>
    <string name="like_error">Failed，please try again！</string>
    <string name="like_duplicate">Has been liked！</string>
    <string name="title_activity_push_ticket">PushTicketActivity</string>
    <string name="title_activity_push_app_detail">PushAppDetailActivity</string>
    <string name="update_title">Software Update</string>
    <string name="update_info">A new version to enjoy your life!</string>
    <string name="update_downloading">Downloading...</string>
    <string name="boot_screen_info">Boot Screen has been updated.</string>
    <string name="btn_cancel">Cancel</string>
    <string name="view_times">View Times:</string>
    <string name="update_time">update to：</string>
    <string name="discuss_tips">discuss...</string>
    <string name="mine_coin">coin：</string>
    <string name="coin_unit">yuan</string>
    <string name="penging_notice">wei_chat will ben opened</string>
    <string name="message_notice">new message</string>
</resources>
