<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="575dp"
    android:layout_height="385dp"
    >

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="107dp"
        android:layout_centerHorizontal="true"
        android:orientation="horizontal" >

        <ImageView
            android:id="@+id/no_data_image_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/dialog_error_icon"
            android:contentDescription="TODO"
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:gravity="center" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_gravity="center_vertical"
            android:text="@string/network_notice_detail"
            android:textColor="#ffcc66"
            android:textSize="25sp" />
    </LinearLayout>

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="56dp"
        android:layout_marginTop="265dp"
        android:gravity="center_horizontal" >

        <Button
            android:id="@+id/dialog_button_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/dialog_button_bg_selector"
            android:text="@string/tv_dialog_network_continue"
            android:textColor="@color/dialog_btn_text_selected"
            android:textSize="30sp" />

        <Button
            android:id="@+id/dialog_button_ok"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@id/dialog_button_cancel"
            android:layout_toRightOf="@id/dialog_button_cancel"
            android:layout_marginLeft="60dp"
            android:background="@drawable/dialog_button_bg_selector"
            android:text="@string/tv_dialog_network_setting"
            android:textColor="@color/dialog_btn_text_selected"
            android:textSize="30sp" />
    </RelativeLayout>

</RelativeLayout>