<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/app_background"
    >

    <TextView
        android:id="@+id/app_icon"
        android:layout_width="@dimen/app_icon_width"
        android:layout_height="@dimen/app_icon_height"
        android:background="@drawable/icon_title"
        android:layout_marginLeft="@dimen/app_icon_margin_left"
        android:layout_marginTop="@dimen/app_icon_margin_top"
        android:focusable="false" />

    <TextView
        android:id="@+id/user_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/app_icon"
        android:layout_marginLeft="@dimen/app_name_margin_left"
        android:text="@string/user_name"
        android:layout_alignBottom="@id/app_icon"
        android:textSize="@dimen/app_name_text_size"
        android:textColor="#ffcc66"
        android:focusable="false" />

    <com.cookingshow.navigation.NavigationBar
        android:id="@+id/navigation"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/navigation_bar_height"
        android:layout_marginTop="@dimen/navigation_bar_margin_top"
        android:layout_marginLeft="@dimen/navigation_bar_margin_left"
        android:orientation="horizontal"
        android:visibility="invisible"
        >
    </com.cookingshow.navigation.NavigationBar>

    <com.cookingshow.view.PagerRelativeLayout
        android:id="@+id/app_content_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="@dimen/pager_relative_layout_margin_top2"
        android:clipChildren="false" >

        <com.cookingshow.view.CustomViewPager
            android:id="@+id/view_pager"
            android:layout_marginLeft="@dimen/custom_view_pager_layout_margin_left"
            android:layout_width="@dimen/custom_view_pager_layout_width"
            android:layout_height="@dimen/custom_view_pager_layout_height"
            android:layout_marginTop="@dimen/custom_view_pager_layout_margin_top"
            android:clipChildren="false"
            />

        <TextView
            android:id="@+id/page_preview_view"
            android:layout_width="@dimen/page_preview_view_layout_width"
            android:layout_height="@dimen/page_preview_view_layout_height"
            android:layout_marginTop="@dimen/page_preview_view_layout_margin_top"
            android:background="@drawable/page_arrow_left_bg_selector"
            android:clickable="true"
            android:visibility="invisible"
            />

        <TextView
            android:id="@+id/page_next_view"
            android:layout_width="@dimen/page_preview_view_layout_width"
            android:layout_height="@dimen/page_preview_view_layout_height"
            android:layout_marginTop="@dimen/page_preview_view_layout_margin_top"
            android:layout_alignParentRight="true"
            android:background="@drawable/page_arrow_right_bg_selector"
            android:clickable="true"
            android:visibility="invisible"
            />

    </com.cookingshow.view.PagerRelativeLayout>

    <LinearLayout
        android:id="@+id/user_activeness"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/big_button_margin_top"
        android:layout_alignParentRight="true"
        android:layout_marginRight="@dimen/big_button_margin_right"
        android:orientation="horizontal" >

        <com.cookingshow.view.BigButton
            android:id="@+id/btn_follow"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/big_button_height"
            android:nextFocusRight="@+id/btn_fans"
            app:text_font="@dimen/big_button_text_size"
            app:text_color="#ffffff"
            app:button_text="@string/user_follow"
            android:background="@drawable/index_search_btn_bg_selector"
            android:gravity="center"
            />

        <com.cookingshow.view.BigButton
            android:id="@+id/btn_fans"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/big_button_height"
            android:nextFocusRight="@+id/btn_points"
            android:nextFocusDown="@+id/navigation"
            android:layout_marginLeft="@dimen/big_button_margin_left"
            app:text_font="@dimen/big_button_text_size"
            app:button_text="@string/user_fans"
            app:text_color="#ffffff"
            android:background="@drawable/index_search_btn_bg_selector"
            android:gravity="center"
            />

        <com.cookingshow.view.BigButton
            android:id="@+id/btn_coin"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/big_button_height"
            android:nextFocusRight="@+id/btn_points"
            android:nextFocusDown="@+id/navigation"
            android:layout_marginLeft="@dimen/big_button_margin_left"
            app:text_font="@dimen/big_button_text_size"
            app:button_text="@string/user_bean"
            app:text_color="#ffffff"
            android:background="@drawable/index_search_btn_bg_selector"
            android:gravity="center"
            />

    </LinearLayout>
    
    <com.cookingshow.view.PageNumView
        android:id="@+id/page_num_view"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/page_num_height"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_marginBottom="@dimen/page_num_margin_bottom"
        android:layout_marginRight="@dimen/big_button_margin_right"
        android:visibility="invisible"
        />

    <com.cookingshow.view.ItemCursorView
        android:id="@+id/cursor_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        />

    <com.cookingshow.view.BigButton
        android:id="@+id/btn_order"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/big_button_height"
        android:layout_alignBottom="@+id/page_num_view"
        android:layout_centerHorizontal="true"
        android:background="@drawable/index_search_btn_bg_selector"
        android:gravity="center"
        android:visibility="invisible"
        app:button_icon="@drawable/page_help_icon"
        app:button_text="@string/btn_dining_order"
        app:text_color="#ffffff"
        app:text_font="@dimen/big_button_text_size" >
    </com.cookingshow.view.BigButton>

</RelativeLayout>