<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <SurfaceView
        android:id="@+id/video_display"
        android:layout_width="@dimen/app_detail_video_layout_margin_width"
        android:layout_height="@dimen/app_detail_video_layout_margin_height"
        android:layout_marginTop="@dimen/app_detail_video_layout_margin_top"
        android:layout_marginLeft="@dimen/app_detail_layout_margin_left"
        android:layout_marginRight="@dimen/app_detail_video_layout_margin_right"
        android:background="@drawable/video_bg_selector"
        android:clickable="true"
        android:focusable="true"
        android:nextFocusDown="@+id/sub_navigation"
        android:layout_gravity="center_vertical"
    />

    <LinearLayout
        android:id="@+id/app_control_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@+id/video_display"
        android:layout_marginLeft="@dimen/app_detail_layout_margin_left"
        android:layout_marginTop="@dimen/app_detail_bar_margin_top" >
            
        <com.cookingshow.navigation.NavigationBar
            android:id="@+id/sub_navigation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:visibility="invisible" >
        </com.cookingshow.navigation.NavigationBar>

        <com.cookingshow.view.BigButton
            android:id="@+id/btn_like"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/big_button_height"
            android:layout_marginLeft="@dimen/big_button_margin_left"
            app:text_font="@dimen/big_button_text_size"
            app:button_icon="@drawable/icon_thumbs_up"
            app:button_text="@string/thumber_up"
            app:text_color="#ffffff"
            android:background="@drawable/index_search_btn_bg_selector"
            android:layout_gravity="center" />
    </LinearLayout>
                   
    <LinearLayout
        android:id="@+id/app_control_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@+id/app_control_1"
        android:layout_marginLeft="@dimen/app_detail_layout_margin_left"
        android:layout_marginTop="@dimen/app_detail_bar_margin_top" >

        <com.cookingshow.view.BigButton
            android:id="@+id/btn_share"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/big_button_height"
            app:text_font="@dimen/big_button_text_size"
            app:text_color="#ffffff"
            app:button_icon="@drawable/icon_search"
            app:button_text="@string/btn_share"
            android:background="@drawable/index_search_btn_bg_selector"
            android:gravity="center" />

        <com.cookingshow.view.BigButton
            android:id="@+id/btn_my_share"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/big_button_height"
            android:layout_marginLeft="@dimen/big_button_margin_left"
            app:text_font="@dimen/big_button_text_size"
            app:button_icon="@drawable/children"
            app:button_text="@string/btn_my_share"
            app:text_color="#ffffff"
            android:background="@drawable/index_search_btn_bg_selector"
            android:gravity="center" />
    </LinearLayout>    


    <LinearLayout
        android:id="@+id/app_control_3"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_toRightOf="@+id/video_display"
        android:layout_marginTop="@dimen/app_detail_layout_margin_top"
        android:orientation="vertical" >
        
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="@dimen/big_button_margin_top"
            >

            <com.cookingshow.view.BigButton
                android:id="@+id/btn_make"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/big_button_height"
                android:nextFocusRight="@+id/btn_search"
                app:text_font="@dimen/big_button_text_size"
                app:text_color="#ffffff"
                app:button_text="@string/btn_make"
                android:background="@drawable/index_search_btn_bg_selector"
                android:gravity="center"
                />

            <com.cookingshow.view.BigButton
                android:id="@+id/btn_comment"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/big_button_height"
                android:nextFocusRight="@+id/btn_manager"
                android:nextFocusDown="@+id/main_navigation"
                android:layout_marginLeft="@dimen/big_button_margin_left"
                app:text_font="@dimen/big_button_text_size"
                app:button_text="@string/btn_comment"
                app:text_color="#ffffff"
                android:background="@drawable/index_search_btn_bg_selector"
                android:gravity="center"
                />

        </LinearLayout>

        <ListView
            android:id="@+id/app_listView"
            android:listSelector="@drawable/video_bg_selector"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:divider="#ffffff"
            android:dividerHeight="0dp" >
        </ListView>
                
    </LinearLayout>
    
    <ProgressBar
        android:id="@+id/progress"
        style="@style/loading_progress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/app_detail_loading_layout_margin_top"
        android:layout_marginLeft="@dimen/app_detail_loading_layout_margin_left"
        android:layout_gravity="center"
        android:focusable="false"
        android:focusableInTouchMode="false"
        android:visibility="gone" />

    <ProgressBar
        android:id="@+id/progress2"
        style="@style/loading_progress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_gravity="center"
        android:focusable="false"
        android:focusableInTouchMode="false"
        android:visibility="gone" />

    <RelativeLayout
        android:id="@+id/vodplayer"
        android:layout_width="match_parent"
        android:layout_height="@dimen/app_detail_control_layout_height"
        android:layout_alignParentBottom="true"
        android:background="@color/vodplayer_controller_backgroud"
        android:visibility="gone" >

        <ImageView
            android:id="@+id/vodplayer_play"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="@dimen/app_detail_control_seekbar_pad_left"
            android:paddingRight="@dimen/app_detail_control_seekbar_pad_right"
            android:layout_centerVertical="true"
            android:focusable="true"
            android:focusableInTouchMode="true" />

        <TextView
	        android:id="@+id/vodplayer_time_label_curr"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_centerVertical="true"
	        android:layout_toRightOf="@id/vodplayer_play"
	        android:textColor="@color/vodplayer_curr_time"
	        android:text="00:00:00"
	        android:textSize="@dimen/app_detail_control_time_text_size" />
        
        <SeekBar
	        android:id="@+id/vodplayer_seek_bar"
	        android:layout_width="@dimen/app_detail_control_seekbar_layout_width"
	        android:layout_height="wrap_content"
            android:paddingLeft="@dimen/app_detail_control_seekbar_pad_left"
            android:paddingRight="@dimen/app_detail_control_seekbar_pad_right"
	        android:maxHeight="@dimen/app_detail_control_seekbar_height"
	        android:layout_centerVertical="true"
	        android:layout_toRightOf="@id/vodplayer_time_label_curr"
	        android:progressDrawable="@drawable/vodplayer_seekbar_style"
	        android:thumb="@drawable/vodplayer_seekbar_thumb"
	        android:thumbOffset="0dp" />

	    <TextView
	        android:id="@+id/vodplayer_time_label_total"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_toRightOf="@id/vodplayer_seek_bar"
	        android:textColor="@color/vodplayer_total_time"
	        android:layout_centerVertical="true"
	        android:text="00:00:00"
	        android:textSize="@dimen/app_detail_control_time_text_size" />
        	            
    </RelativeLayout>
        
</RelativeLayout>
